Sabado 21 de Septiembre

--- a/primer_script.html
+++ b/primer_script.html
@@ -4,10 +4,28 @@
         <title>Primer Script</title>
         <meta charset="utf-8"/>
     </head>
+
     <body>
-        <h1>Titulo de HATML</h1>
-        <h2>Capitulo 1</h2>
-        <h3>Seccion 1.1</h3>
+		<header>
+        <h1>Titulo de HTML</h1>
+		<a href="inicio">
+		<p>
+			<ul>
+			<li><a href="#Capitulo1">Capitulo 1</a><br/></li>
+			<li><a href="#Capitulo2">Capitulo 2</a><br/></li>
+			<li><a href="#Capitulo3">Capitulo 3</a><br/></li>
+			<li><a href="#Capitulo4">Capitulo 4</a><br/></li>
+			<li><a href="#Capitulo5">Capitulo 5</a><br/></li>
+			<li><a href="#Capitulo6">Capitulo 6</a></li>
+			</ul>
+		</p>
+		<a href="index.html">Ir a home</a>
+	</header>
+	
+	<main>
+	<section id="Capitulo1"
+        <h2 id="Capitulo1">Capitulo 1</h2>
+		<h3>seccion 1.1</h3>
 	
 	<p>
 	Lorem ipsum dolor sit amet consectetur adipiscing 
@@ -21,7 +39,10 @@
 	suscipit nec, sociosqu netus sodales sed venenatis 
 	tristique elementum.
 	</p>	
+	</section>
 
+	
+	<h2 id="Capitulo2">Capitulo 2</h2>
 	<p>
 	Lorem ipsum dolor sit amet consectetur adipiscing 
 	elit vestibulum vehicula per, condimentum mi sem 
@@ -36,9 +57,74 @@
 	</p>	
 
 
+	<h2 id="Capitulo3">Capitulo 3</h2>
+	<p>
+	Lorem ipsum dolor sit amet consectetur adipiscing 
+	elit vestibulum vehicula per, condimentum mi sem 
+	bibendum facilisis taciti aliquet consequat praesent.
+	Praesent integer nostra nec nibh felis condimentum
+	et, aliquam aenean nam aliquet est parturient convallis,
+	pharetra quisque turpis sollicitudin torquent mauris. 
+	Interdum justo turpis gravida mattis facilisis eget mi 
+	pulvinar, velit sapien nulla vel aliquam dictumst 
+	suscipit nec, sociosqu netus sodales sed venenatis 
+	tristique elementum.
+	</p>	
 
+	<h2 id="Capitulo4">Capitulo 4</h2>
+	<p>
+	Lorem ipsum dolor sit amet consectetur adipiscing 
+	elit vestibulum vehicula per, condimentum mi sem 
+	bibendum facilisis taciti aliquet consequat praesent.
+	Praesent integer nostra nec nibh felis condimentum
+	et, aliquam aenean nam aliquet est parturient convallis,
+	pharetra quisque turpis sollicitudin torquent mauris. 
+	Interdum justo turpis gravida mattis facilisis eget mi 
+	pulvinar, velit sapien nulla vel aliquam dictumst 
+	suscipit nec, sociosqu netus sodales sed venenatis 
+	tristique elementum.
+	</p>	
+
+	<h2 id="Capitulo5">Capitulo 5</h2>
+	<p>
+	Lorem ipsum dolor sit amet consectetur adipiscing 
+	elit vestibulum vehicula per, condimentum mi sem 
+	bibendum facilisis taciti aliquet consequat praesent.
+	Praesent integer nostra nec nibh felis condimentum
+	et, aliquam aenean nam aliquet est parturient convallis,
+	pharetra quisque turpis sollicitudin torquent mauris. 
+	Interdum justo turpis gravida mattis facilisis eget mi 
+	pulvinar, velit sapien nulla vel aliquam dictumst 
+	suscipit nec, sociosqu netus sodales sed venenatis 
+	tristique elementum.
+	</p>	
+
+
+	<h2 id="Capitulo6">Capitulo 6</h2>
+	<p>
+	Lorem ipsum dolor sit amet consectetur adipiscing 
+	elit vestibulum vehicula per, condimentum mi sem 
+	bibendum facilisis taciti aliquet consequat praesent.
+	Praesent integer nostra nec nibh felis condimentum
+	et, aliquam aenean nam aliquet est parturient convallis,
+	pharetra quisque turpis sollicitudin torquent mauris. 
+	Interdum justo turpis gravida mattis facilisis eget mi 
+	pulvinar, velit sapien nulla vel aliquam dictumst 
+	suscipit nec, sociosqu netus sodales sed venenatis 
+	tristique elementum.
+	</p>	
+	<a href="#inicio"></a>
+	</main>
+
+
+	<!--
         <h4></h4>
-        <h5></h5>
+        <h5></h5>		
+	-->
 
     </body>
+<footer>
+	&copy; Todos Derechos Reservados 2024 ICC SCJ
+</footer>
+
 </HTML>
