--- a/primer_script.html
+++ b/primer_script.html
@@ -115,6 +115,9 @@
 	</p>	
 	<a href="#inicio"></a>
 	</main>
+	<aside>
+		<p>Cualquier Contenido sin relevancia con el documento</p>
+	</aside>
 
 
 	<!--
